Include schema new version